# benjisponge.com

./: .dockerignore  .prototools  CLAUDE.md  Cargo.toml  Justfile  README.md  build.rs  clippy.toml  lefthook.yml  railway.toml  thought.just
.cursor/: mcp.json
.github/workflows/: check.yml  deploy.yml
data/: airports.json
deploy/: .gitignore  Dockerfile  cloudflared.Dockerfile  cloudflared.railway.toml  fitness-schema.sql  package-lock.json  package.json  spire-schema.sql  tsconfig.json  wrangler.jsonc
deploy/assets/: _headers
deploy/src/: auth.ts  cache.ts  fitness.ts  index.ts  spire.ts
docs/: analytics.md  cloudflare-deploy.md  fitness.md  railway-deploy.md  topcoat-notes.md
docs/superpowers/plans/: 2026-07-18-junk-drawer-restructure.md
docs/superpowers/specs/: 2026-07-18-bens-site-design.md  2026-07-18-junk-drawer-restructure-design.md
scripts/: dev.sh  reset-fitness-local.sh  snapshot  snapshot-diff  thought-new.sh  thought-publish.sh
snapshots/: latest
snapshots/2026-07-18T1423__1af4265/: manifest.tsv
snapshots/2026-07-18T1501__1af4265__integration/: manifest.tsv
snapshots/2026-07-18T1528__c7e3b32__v1/: manifest.tsv
snapshots/2026-07-18T2232__0bfdc0e__v2/: manifest.tsv
snapshots/2026-07-19T0014__ff8a86c__off-the-clock/: manifest.tsv
snapshots/2026-07-19T0038__991d663__interests/: manifest.tsv
snapshots/2026-07-19T0522__95d2998__logbook/: manifest.tsv
src/: app.rs  auth.rs  components.rs  content.rs  data.rs  design.rs  eastern.rs  emdash.rs  fitness.rs  flight.rs  lib.rs  main.rs  util.rs
src/app/: analytics.rs  emdash_layer.rs  experience.rs  feed.rs  fitness_api.rs  interests.rs  llms.rs  not_found.rs  off_the_clock.rs  resume.rs  spire_api.rs  thoughts.rs
src/app/analytics/: dashboard.rs  db.rs  guard.rs  input.rs  map.rs  models.rs
src/app/interests/: drums.rs  felix.rs  keyboards.rs  keys.rs  lifting.rs  models.rs  puzzles.rs  simulation.rs  spire.rs  swing.rs
src/app/thoughts/: pesky_code.rs  planes.rs
src/components/: analytics.js  cards.rs  chrome.rs  links.rs  popover.rs  rail.rs  spread.rs
src/content/: experience.rs  interests.rs  logbook.rs  patches.rs  posts.rs  routes.rs  spire_runs.rs
src/data/: fitness.rs  models.rs  spire.rs
src/fitness/: filters.rs  import.rs  snapshot.rs  store.rs  validate.rs
src/flight/: airports.rs  comparison_scale.rs  emissions.rs  format.rs  reference_data.rs  sources.rs
styles/: analytics.css  felix.css  input.css  lifting.css  logbook.css  planes-charts.css  planes-desk.css  planes-form.css  planes-receipt.css  planes-tokens.css  site.css  swing.css
tests/fixtures/: README.md  capture.sh
tests/fixtures/api/: by_path_missing.headers  calendar.json  err_calendar_qs.json  err_effort_places.json  err_exercise_dup.json  err_facets_qs.json  err_from_feb30.json  err_from_gt_to.json  err_ids_qs.json  err_latest_qs.json  err_minload_gt_max.json  err_minload_text.json  err_movement_bad.json  err_movement_dup.json  err_movement_nine.json  err_page0.json  err_page_dup.json  err_perpage15.json  err_perpage50.json  err_q_50byte.json  err_q_long.json  (+39 more)
toasty/: history.toml
toasty/migrations/: 0000_spire_tables.sql  0001_fitness_tables.sql  0002_analytics_tables.sql  0003_analytics_visitor_aliases.sql  0004_analytics_server_sessions.sql
toasty/snapshots/: 0000_snapshot.toml  0001_snapshot.toml  0002_snapshot.toml  0003_snapshot.toml  0004_snapshot.toml
(+43 files in other folders)
