[package]
name = "benjisponge"
version = "0.1.0"
edition = "2024"
# Three bins live here (the site + two sync CLIs); plain `cargo run` and
# `topcoat dev` need to keep resolving to the site.
default-run = "benjisponge"

[dependencies]
csv = "1.3.1"
jiff = { version = "0.2.34", features = ["tzdb-bundle-always"] }
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "json",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros"] }
topcoat = { version = "0.3.0", features = ["tailwind", "font-fontsource"] }

[build-dependencies]
topcoat = { version = "0.3.0", default-features = false, features = ["tailwind"] }
