[package]
name = "benjisponge"
version = "0.1.0"
edition = "2024"
# Four bins live here (the site, two sync CLIs, migrations); plain
# `cargo run` and `topcoat dev` need to keep resolving to the site.
default-run = "benjisponge"

# The sync CLIs are standalone crates that live WITH their interests —
# delete an interest folder and its importer goes too. They are not part
# of the site binary's module tree.
[[bin]]
name = "fitness_sync"
path = "src/app/interests/lifting/fitness_sync.rs"

[[bin]]
name = "spire_sync"
path = "src/app/interests/spire/spire_sync.rs"

[dependencies]
anyhow = "1.0.104"
csv = "1.3.1"
form_urlencoded = "1.2.2"
jiff = { version = "0.2.34", features = ["tzdb-bundle-always"] }
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "json",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
subtle = "2.6.1"
toasty = { version = "0.8.0", features = ["postgresql"] }
toasty-cli = "0.8.0"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "sync"] }
topcoat = { version = "0.3.0", features = ["tailwind", "font-fontsource"] }
url = "2.5.8"
uuid = { version = "1.19.0", features = ["v4"] }

[build-dependencies]
topcoat = { version = "0.3.0", default-features = false, features = ["tailwind"] }
